Just made the left overlap from absolute to fixed

--- a/homepage-style.css
+++ b/homepage-style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .home-page .overlap {
-  position: absolute;
+  position: fixed;
   width: 390px;
   height: 1024px;
   top: 0;
